--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/mainRootLayout"
         android:background="@color/colorPrimary"
         tools:context=".MainActivity">
 
+    <!--This view for targeting it by the spotlight, it has no other job -->
     <View
             android:id="@+id/view"
             android:layout_width="match_parent"
@@ -19,20 +21,6 @@
             app:layout_constraintStart_toStartOf="@+id/mainRecyclerView"
             app:layout_constraintVertical_bias="0.0"/>
 
-    <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/MainAddIconImage"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@color/colorAccent"
-            android:src="@drawable/ic_exposure_plus_1_black_24dp"
-            android:visibility="invisible"
-
-            app:layout_constraintEnd_toEndOf="@+id/mainRecyclerView"
-            app:layout_constraintStart_toStartOf="@+id/mainRecyclerView"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/mainRecyclerView"/>
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mainRecyclerView"
             android:layout_width="match_parent"
@@ -40,6 +28,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
