--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,20 +28,30 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0"/>
     <com.andremion.counterfab.CounterFab
-            android:id="@+id/counter_fab"
+            android:id="@+id/counterFab"
             android:background="@android:color/holo_red_light"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:badgeBackgroundColor="@android:color/holo_red_light"
             app:badgeTextColor="@android:color/white"
             app:badgePosition="RightTop"
-            android:src="@drawable/ic_shopping_cart_black_24dp"
-            app:layout_constraintEnd_toEndOf="@+id/mainRecyclerView" android:layout_marginStart="8dp"
+            android:src="@drawable/ic_shopping_cart"
+            app:layout_constraintEnd_toEndOf="@+id/mainRecyclerView"
             app:layout_constraintStart_toStartOf="@+id/mainRecyclerView"
-            app:layout_constraintBottom_toBottomOf="@+id/mainRecyclerView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/mainRecyclerView" app:layout_constraintHorizontal_bias="0.858"
-            app:layout_constraintVertical_bias="0.853"/>
+            app:layout_constraintBottom_toBottomOf="@+id/mainRecyclerView"
+            app:layout_constraintTop_toTopOf="@+id/mainRecyclerView"
+            app:layout_constraintHorizontal_bias="0.858"
+            app:layout_constraintVertical_bias="0.853"
+            android:visibility="gone"/>
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="@+id/mainRecyclerView"
+            app:layout_constraintStart_toStartOf="@+id/mainRecyclerView" android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
