--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -10,23 +10,25 @@
         tools:context=".ConnectionErrorActivity">
 
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
+                  android:layout_height="0dp"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp"
-                  android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:orientation="vertical" android:id="@+id/linearLayout">
+                  android:orientation="vertical" android:id="@+id/linearLayout" android:layout_marginBottom="4dp"
+                  app:layout_constraintBottom_toTopOf="@+id/tryAgain">
         <ImageView
+                android:contentDescription="@string/no_connection"
                 android:src="@drawable/ic_signal_wifi_off"
+                android:layout_weight="8"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="0dp"/>
 
         <TextView
                 android:gravity="center"
+                android:layout_weight="1"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:text="@string/no_internet_connection"
@@ -41,12 +43,10 @@
             android:text="@string/try_again"
             android:background="@android:color/background_dark"
             android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintVertical_bias="1.0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
