--- a/app/src/main/res/layout/cart_bottom_sheet.xml
+++ b/app/src/main/res/layout/cart_bottom_sheet.xml
@@ -79,11 +79,12 @@
                 android:id="@+id/TaxRate"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_constraintEnd_toStartOf="@+id/cartItemAmount"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView2"
-                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="@+id/cartItemAmount"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/TaxAmount"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="@+id/textView"
+                app:layout_constraintBottom_toBottomOf="@+id/TaxAmount"/>
 
         <TextView
                 android:id="@+id/TaxAmount"
