--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
 
-        tools:context=".ConnectionErrorActivity">
+        tools:context=".activity.ConnectionErrorActivity">
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="0dp"
@@ -20,7 +20,7 @@
                   android:orientation="vertical" android:id="@+id/linearLayout" android:layout_marginBottom="4dp"
                   app:layout_constraintBottom_toTopOf="@+id/tryAgain">
         <ImageView
-                android:contentDescription="@string/no_connection"
+                android:contentDescription="@string/noConnection"
                 android:src="@drawable/ic_signal_wifi_off"
                 android:layout_weight="8"
                 android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
                 android:layout_weight="1"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                android:text="@string/no_internet_connection"
+                android:text="@string/noInternetConnection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -40,7 +40,7 @@
             android:id="@+id/tryAgain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/try_again"
+            android:text="@string/tryAgain"
             android:background="@android:color/background_dark"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
