--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:id="@+id/mainRootLayout"
         android:background="@color/colorPrimary"
-        tools:context=".MainActivity">
+        tools:context=".activity.MainActivity">
 
     <!--This view for targeting it by the spotlight, it has no other job -->
     <View
