--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -23,13 +23,15 @@
                 android:contentDescription="@string/noConnection"
                 android:src="@drawable/ic_signal_wifi_off"
                 android:layout_weight="8"
+                android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"/>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:gravity="center"
                 android:layout_weight="1"
                 android:textSize="30sp"
+                android:textColor="#FFCA28"
                 android:textStyle="bold"
                 android:text="@string/noInternetConnection"
                 android:layout_width="match_parent"
