--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,16 @@
     <!--This view for targeting it by the spotlight, it has no other job -->
     <View
             android:id="@+id/view"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/mainRecyclerView"
-            android:layout_marginTop="0dp"
             app:layout_constraintTop_toTopOf="@+id/mainRecyclerView"
             app:layout_constraintStart_toStartOf="@+id/mainRecyclerView"
             app:layout_constraintVertical_bias="0.0"/>
 
     <androidx.recyclerview.widget.RecyclerView
+            android:paddingTop="2dp"
             android:id="@+id/mainRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -43,9 +43,13 @@
             app:layout_constraintStart_toStartOf="@+id/mainRecyclerView"
             app:layout_constraintBottom_toBottomOf="@+id/mainRecyclerView"
             app:layout_constraintTop_toTopOf="@+id/mainRecyclerView"
-            app:layout_constraintHorizontal_bias="0.858"
-            app:layout_constraintVertical_bias="0.853"
-            android:visibility="gone"/>
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="48dp"
+            app:layout_constraintHorizontal_bias="0.961"
+            app:layout_constraintVertical_bias="0.978"/>
     <ProgressBar
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
