--- a/app/src/main/res/layout/cart_bottom_sheet.xml
+++ b/app/src/main/res/layout/cart_bottom_sheet.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
-              android:background="@android:color/darker_gray"
               android:layout_width="match_parent"
+              android:background="@color/colorAccent"
               android:id="@+id/bottom_sheet_layout"
+
               app:behavior_hideable="true"
               app:behavior_peekHeight="48dp"
               app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
               android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
             android:padding="4dp">
 
@@ -28,7 +30,6 @@
         />
         <TextView
                 android:id="@+id/TotalAmount"
-
                 tools:text="10.0 ₺"
                 android:textStyle="italic"
                 android:textSize="18sp"
@@ -103,12 +104,11 @@
                 app:layout_constraintBottom_toTopOf="@+id/textView"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <Button
-
-            android:background="@android:color/background_dark"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/submit_order"
             android:layout_marginTop="32dp"
             android:textColor="@android:color/white"
-            android:id="@+id/payment"
+            android:id="@+id/submitOrderBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
