--- a/app/src/main/res/layout/cart_recyclerview_item.xml
+++ b/app/src/main/res/layout/cart_recyclerview_item.xml
@@ -1,51 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="horizontal"
-              android:padding="4dp"
-              android:background="@android:color/transparent"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <ImageView
-            android:id="@+id/cartItemImageView"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:padding="4dp"
-            tools:src="@drawable/error"/>
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        app:cardBackgroundColor="#aa5c0f8b"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="7dp"
+        android:layout_margin="4dp"
+        android:elevation="4dp"
+>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:background="@android:color/transparent"
+    >
+        <ImageView
+                android:id="@+id/cartItemImageView"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:padding="4dp"
+                android:contentDescription="@string/food_image"/>
         <LinearLayout
+                android:background="@android:color/transparent"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <TextView
+                        android:gravity="start"
+                        android:id="@+id/cartItemTitle"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/white"
+                        android:layout_weight="8"
+                        android:paddingStart="8dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:ignore="RtlSymmetry"
+                />
+                <TextView
+                        android:gravity="end"
+                        android:textStyle="italic"
+                        android:textColor="@android:color/white"
+                        android:paddingEnd="8dp"
+                        android:id="@+id/cartItemPrice"
+                        android:layout_weight="2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:ignore="RtlSymmetry"/>
+            </LinearLayout>
             <TextView
-                    android:gravity="start"
-                    android:id="@+id/cartItemTitle"
-                    android:textStyle="bold"
-                    android:layout_weight="8"
-                    android:paddingStart="8dp"
-                    tools:text="The Big Burger"
-                    android:layout_width="wrap_content"
+                    android:padding="4dp"
+                    android:textColor="@android:color/white"
+                    android:id="@+id/cartItemDescription"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:ignore="RtlSymmetry"
             />
-            <TextView
-                    android:gravity="end"
-                    android:textStyle="italic"
-                    android:paddingEnd="8dp"
-                    android:id="@+id/cartItemPrice"
-                    android:layout_weight="2"
-                    tools:text="10.0t"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:ignore="RtlSymmetry"/>
-        </LinearLayout>
-        <TextView
-                android:padding="4dp"
-                android:id="@+id/cartItemDescription"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
 
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
