--- a/app/src/main/res/layout/main_recyclerview_item.xml
+++ b/app/src/main/res/layout/main_recyclerview_item.xml
@@ -1,76 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ItemRootLayout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:background="@android:color/transparent">
-
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:background="#aa5c0f8b"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="4dp"
+        android:layout_margin="2dp"
+        app:cardBackgroundColor="@color/secondBackground">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ItemRootLayout"
+            android:layout_gravity="center|center_horizontal"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            >
-        <ImageView
-                android:padding="4dp"
-                android:id="@+id/mainItemImage"
+            android:background="@android:color/transparent">
+
+        <LinearLayout
+                android:layout_gravity="center|center_horizontal"
+                android:background="@android:color/transparent"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="7"/>
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/insiderLayout"
-                android:baselineAligned="true"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="4dp">
-            <TextView
-                    android:id="@+id/mainItemTitle"
-                    tools:text="The Big Burger"
-                    android:textColor="@android:color/white"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@+id/mainItemPrice"/>
-            <TextView
-                    android:gravity="end"
-                    android:id="@+id/mainItemPrice"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+            <ImageView
+                    android:layout_gravity="center|center_horizontal"
+                    android:padding="4dp"
+                    android:id="@+id/mainItemImage"
                     android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:contentDescription="@string/food_image"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/insiderLayout"
+                    android:baselineAligned="true"
+                    android:layout_gravity="center|center_horizontal"
+                    android:background="@android:color/transparent"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
+            >
+                <TextView
+                        android:id="@+id/mainItemTitle"
+                        android:textColor="@android:color/white"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="2dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintVertical_bias="1.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toStartOf="@+id/mainItemPrice"/>
+                <TextView
+                        android:gravity="end"
+                        android:id="@+id/mainItemPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:textColor="@android:color/white"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.0"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                    android:layout_gravity="center|center_horizontal"
+                    android:id="@+id/mainItemInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:layout_margin="2dp"
+                    android:paddingStart="14dp"
+                    android:paddingEnd="14dp"
                     android:textColor="@android:color/white"
-                    tools:text="18.50 ₺"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.0"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <TextView
-                android:layout_weight="2"
-                android:id="@+id/mainItemInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                tools:text="A classic but so good."
-                android:layout_margin="2dp"
-                android:textColor="@android:color/white"
 
 
-                android:textStyle="italic" android:padding="16dp"/>
-    </LinearLayout>
+                    android:textStyle="italic"/>
+        </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
