--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00acd8</color>
-    <color name="colorPrimaryDark">#12284c</color>
-    <color name="colorAccent">#5c0f8b</color>
-    <color name="trans">#00000000</color>
+    <color name="colorPrimary">#ff4081</color>
+    <color name="colorPrimaryDark">#c60055</color>
+    <color name="colorAccent">#26c6da</color>
     <color name="green">#32CD32</color>
-    <color name="red">#FF0000</color>
+    <color name="red">#8b0000</color>
+    <color name="secondBackground">#aa5c0f8b</color>
 </resources>
