--- a/app/src/main/res/layout/cart_bottom_sheet.xml
+++ b/app/src/main/res/layout/cart_bottom_sheet.xml
@@ -3,16 +3,14 @@
               xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:background="@color/colorAccent"
+              android:background="@color/colorPrimaryDark"
               android:id="@+id/bottom_sheet_layout"
-
               app:behavior_hideable="true"
               app:behavior_peekHeight="48dp"
               app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-
             android:layout_height="wrap_content"
             android:padding="4dp">
 
@@ -104,7 +102,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/textView"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <Button
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/colorAccent"
             android:text="@string/submit_order"
             android:layout_marginTop="32dp"
             android:textColor="@android:color/white"
