--- a/app/src/main/res/layout/cart_recyclerview_item.xml
+++ b/app/src/main/res/layout/cart_recyclerview_item.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        app:cardBackgroundColor="#aa5c0f8b"
+        app:cardBackgroundColor="@color/secondBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="7dp"
@@ -13,7 +13,6 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:background="@android:color/transparent"
     >
         <ImageView
                 android:id="@+id/cartItemImageView"
@@ -22,7 +21,6 @@
                 android:padding="4dp"
                 android:contentDescription="@string/food_image"/>
         <LinearLayout
-                android:background="@android:color/transparent"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
